Fixed the button rows position and horizontal alignment.Last task is the footer,which has been fixed to the bottom of the page,lists arranged in two rows of threes at the opposite side of another.The remaining problem of the footer is its background color not filing up its entire width of the page.

--- a/index.css
+++ b/index.css
@@ -42,18 +42,26 @@ input {
   font-size: 16px;
   display: block;
   border-radius: 30px;
-
 }
 
-input {
-  
 
-}
   
 button {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  background-color: #ccc;
+  margin: 5px;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 99%;
+  background-color: gray;
   
-   
+
+
 }
